[tool.autopep8]

[tool.poetry]
name = "sbx_dvc"
version = "0.1.0"
description = "Pkg description"
authors = ["Emmanuel Roux <email>"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = []
packages = [ ]
include = [ ]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
dvc = {extras = ["all"], version = "^1.9.1"}
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coverage = "*"
ipython = "*"
isort = { version = "*", extras = ["pyproject"] }
pylint = "*"
pytest = "*"
pytest-cov = "*"
safety = "*"
watermark = "*"
autopep8 = "^1.5.4"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true

[tool.pylint.options]
disable = """
  bad-continuation,
  duplicate-code
  too-few-public-methods,
  too-many-arguments,
  too-many-branches,
  too-many-instance-attributes,
  too-many-lines,
  too-many-locals,
  too-many-public-methods,
  too-many-statements,
  unused-import
"""
max-line-length = "120"
