[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flasky"
version = "0.1.0"
description = "Pkg description"
authors = ["Emmanuel Roux <email>"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = []
packages = [ ]
include = [
    "README.md",
    "pyproject.toml"
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
selenium = "^3.141.0"
Flask = "^1.1.2"
pytest-selenium = "^2.0.1"
waitress = "^1.4.4"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coverage = "*"
ipython = "*"
isort = { version = "*", extras = ["pyproject"] }
pylint = "*"
pytest = "*"
pytest-cov = "*"
python-language-server = "*"
safety = "*"
watermark = "*"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true

[tool.pylint.options]
disable = """
  bad-continuation,
  too-many-lines,
  too-many-public-methods,
  too-many-locals,
  too-many-statements,
  too-many-arguments,
  too-many-instance-attributes,
  too-many-branches,
  too-few-public-methods,
  duplicate-code
"""
max-line-length = "120"

[tool.pytest.ini_options]
